# opentui-rs

./: .gitignore  Cargo.toml
crates/core/: Cargo.toml
crates/core/benches/: buffer.rs  color.rs  highlight.rs  input.rs  renderer.rs  text.rs  unicode.rs  workloads.rs
crates/core/examples/: 01_hello_terminal.rs  02_colors.rs  03_styles.rs  04_drawing.rs  05_scissor.rs  06_opacity.rs  07_input.rs  08_animation.rs  09_text_buffer.rs  11_highlighting.rs  15_dashboard.rs  README.md  core_dashboard.rs  declarative_hello.rs  editor.rs  focus_demo.rs  hello.rs  opencode.rs  opencode_declarative.rs  opencode_layout.rs  opencode_view.rs  overlay_demo.rs  threaded.rs  widgets_showcase.rs
crates/core/src/: cell.rs  color.rs  error.rs  event.rs  grapheme_pool.rs  keybinding.rs  layout.rs  lib.rs  link.rs  list.rs  prelude.rs  render_command.rs  scroll.rs  style.rs  theme.rs  widget.rs
crates/core/src/ansi/: mod.rs  output.rs  sequences.rs
crates/core/src/ansi/snapshots/: opentui__ansi__tests__snapshot_bg_colors_16.snap  opentui__ansi__tests__snapshot_bg_colors_truecolor.snap  opentui__ansi__tests__snapshot_cursor_position.snap  opentui__ansi__tests__snapshot_fg_colors_truecolor.snap  opentui__ansi__tests__snapshot_hyperlinks.snap  opentui_core__ansi__tests__snapshot_bg_colors_16.snap.new  opentui_core__ansi__tests__snapshot_bg_colors_256.snap.new  opentui_core__ansi__tests__snapshot_bg_colors_truecolor.snap.new  opentui_core__ansi__tests__snapshot_cursor_move.snap.new  opentui_core__ansi__tests__snapshot_cursor_position.snap.new  opentui_core__ansi__tests__snapshot_fg_colors_16.snap.new  opentui_core__ansi__tests__snapshot_fg_colors_256.snap.new  opentui_core__ansi__tests__snapshot_fg_colors_nocolor.snap.new  opentui_core__ansi__tests__snapshot_fg_colors_truecolor.snap.new  opentui_core__ansi__tests__snapshot_hyperlinks.snap.new  opentui_core__ansi__tests__snapshot_text_attributes.snap.new  opentui_rust__ansi__tests__snapshot_bg_colors_256.snap  (+5 more)
crates/core/src/buffer/: drawing.rs  mod.rs  opacity.rs  pixel.rs  scissor.rs
crates/core/src/highlight/: highlighted_buffer.rs  mod.rs  syntax.rs  theme.rs  token.rs  tokenizer.rs
crates/core/src/input/: keyboard.rs
crates/core/src/renderable/: behavior.rs  context.rs  event.rs  keybinding.rs  layout.rs  list.rs  mod.rs  node.rs  prelude.rs  render_command.rs  scroll.rs  theme.rs  tree.rs  widget.rs
crates/core/src/renderer/: diff.rs  hitgrid.rs  mod.rs  threaded.rs
crates/core/src/terminal/: capabilities.rs  cursor.rs  mod.rs  mouse.rs  queries.rs  raw.rs
crates/core/src/text/: buffer.rs  edit.rs  editor.rs  mod.rs  rope.rs  segment.rs  view.rs
crates/core/src/unicode/: bidi.rs  grapheme.rs  mod.rs  normalize.rs  search.rs  width.rs
crates/core/src/view/: builder.rs  element.rs  event.rs  key.rs  mod.rs  node.rs  props.rs  rebuild.rs  runtime.rs
crates/core/src/widgets/: box_widget.rs  editor_widget.rs  fill_widget.rs  input_widget.rs  list_widget.rs  mod.rs  progress_widget.rs  scroll_view_widget.rs  separator_widget.rs  status_line_widget.rs  styled_text_widget.rs  tabs_widget.rs  text_line_widget.rs  text_widget.rs  view_widget.rs
crates/core/tests/: benchmark_comparison.rs  benchmarks_validate.rs  buffer_edge_cases.rs  cell_tests.rs  conformance.rs  demo_showcase_snapshots.rs  e2e_input_flow.rs  e2e_input_output.rs  e2e_perf.rs  e2e_render_cycle.rs  e2e_unicode.rs  e2e_workflows.rs  examples_compile.rs  fixtures_test.rs  golden_rendering.rs  highlight_e2e.rs  integration.rs  memory_safety_regression.rs  proptest_buffer_diff.rs  proptest_color_ops.rs  proptest_text_unicode.rs  pty_e2e.rs  repro_issue_diff_panic.rs  repro_issue_text_drawing.rs  repro_issues.rs  security_regression.rs  tui_snapshot.rs  view_builder.rs  view_runtime.rs  visual_pty_test.rs  widget_tree.rs
crates/core/tests/baselines/: perf_baseline.json
crates/core/tests/common/: analysis.rs  artifacts.rs  golden.rs  harness.rs  input_sim.rs  metrics.rs  mock_terminal.rs  mod.rs  pty.rs
crates/core/tests/e2e/: highlight_e2e.rs
crates/core/tests/fixtures/: assertions.rs  mock_input.rs  mock_terminal.rs  mod.rs  test_data.rs
crates/core/tests/golden/: README.md  alpha_blend_50.golden  bold_colors.golden  box_double_line.golden  box_single_line.golden  color16_palette.golden  color256_palette.golden  combining_marks.golden  command_palette.golden  debug_panel.golden  dim_colors.golden  emoji_basic.golden  emoji_zwj.golden  empty_buffer_80x24.golden  full_screen_text.golden  help_overlay.golden  mixed_width.golden  nested_scissor.golden  opacity_stack.golden  rtl_text.golden  scissor_clipped.golden  single_char_center.golden  tour_screen_1.golden  tour_screen_5.golden  truecolor_gradient.golden  wide_chars_cjk.golden
crates/core/tests/snapshots/: demo_showcase_snapshots__cap_ideal_120x40.snap  demo_showcase_snapshots__cap_minimal_80x24.snap  demo_showcase_snapshots__cap_no_hyperlinks_120x40.snap  demo_showcase_snapshots__cap_no_mouse_120x40.snap  demo_showcase_snapshots__cap_no_truecolor_120x40.snap  demo_showcase_snapshots__cap_tiny_50x15.snap  demo_showcase_snapshots__headless_120x40.snap  demo_showcase_snapshots__headless_5_frames.snap  demo_showcase_snapshots__headless_compact.snap  demo_showcase_snapshots__headless_default.snap  demo_showcase_snapshots__tour_determinism.snap
(+82 files in other folders)
