[package]
name = "opentui_rust"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "High-performance terminal UI rendering engine with alpha blending and diffed buffers"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/opentui_rust"
homepage = "https://github.com/Dicklesworthstone/opentui_rust"
documentation = "https://docs.rs/opentui_rust"
readme = "README.md"
keywords = ["tui", "terminal", "ui", "cli"]
categories = ["command-line-interface", "rendering"]
exclude = [
    "*.png",
    "*.webp",
    "beads_import.md",
    "claude-upgrade-progress.json",
    "AGENTS.md",
    "IMPLEMENTATION_REPORT.md",
    "UPGRADE_LOG.md",
    "PLAN_TO_PORT_OPENTUI_TO_RUST.md",
    "EXISTING_OPENTUI_STRUCTURE.md",
    "PROPOSED_RUST_ARCHITECTURE.md",
    ".beads/",
    "target-sagebeacon/",
    "scripts/",
    "a.out",
]

[features]
default = []
# Enable PTY-based E2E tests (require real terminal, slower)
pty-tests = []

[dependencies]
bitflags = "2.12"
libc = "0.2.186"
ropey = "1.6"
unicode-bidi = "0.3.18"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.13"
unicode-width = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.11"
insta = { version = "1.47", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
# PTY testing infrastructure
portable-pty = "0.8"
vt100 = "0.15"

[[bench]]
name = "buffer"
harness = false

[[bench]]
name = "color"
harness = false

[[bench]]
name = "text"
harness = false

[[bench]]
name = "renderer"
harness = false

[[bench]]
name = "unicode"
harness = false

[[bench]]
name = "highlight"
harness = false

[[bench]]
name = "workloads"
harness = false

[[bench]]
name = "input"
harness = false

[workspace]
members = ["crates/core"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/opentui_rust"
homepage = "https://github.com/Dicklesworthstone/opentui_rust"

[workspace.dependencies]
opentui_rust = { path = "." }
taffy = { version = "0.10", default-features = false, features = ["std", "flexbox", "grid", "block_layout", "taffy_tree"] }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[lints]
workspace = true
